--- a/cloud-simple-service/pom.xml
+++ b/cloud-simple-service/pom.xml
@@ -97,12 +97,12 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
+	<!--	<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+		</plugins>-->
 		<defaultGoal>compile</defaultGoal>
 	</build>
 
