--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8888
-spring.cloud.config.server.git.uri=https://git.oschina.net/zhou666/spring-cloud-7simple.git
-spring.cloud.config.server.git.searchPaths=cloud-config-repo
+#spring.cloud.config.profile=dev
+#spring.cloud.config.server.native.search-locations=../cloud-config-repo
+spring.cloud.config.server.git.uri=http://192.168.11.19/limiaomiao/config.git
+spring.cloud.config.server.git.searchPaths=/
+#cloud-config-repo
 eureka.client.serviceUrl.defaultZone=http\://localhost\:8761/eureka/,http\://zlhost\:8762/eureka/
 spring.application.name=cloud-config-server
 #$ curl localhost:8888/env
